src/test/deca/context/invalid/provided/ContextSansObjet/varIndef.deca
//Description:
//  variable sans définition / déclaration
//
//Résultat:
// Erreur Contextuelle
//  ligne 8 :
{
indefini=10;
}
